# Aminulpharmatech

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: pharmatech_demo.py
src/pharmatech/: __init__.py  medicine_db.py
tests/: test_medicine_db.py  test_pharmatech.py
