[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pharmatech"
version = "0.1.0"
description = "A Python library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/username/pharmatech"
Repository = "https://github.com/username/pharmatech.git"
